@@ -55,8 +55,17 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.11.0</version>
 					<configuration>
-						<release>21</release>
+						<source>21</source>
+						<target>21</target>
 					</configuration>
+				</plugin>
+				<plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-surefire-plugin</artifactId>
+   					 <version>3.2.5</version>
+    				<configuration>
+        				<argLine>--enable-preview</argLine>
+    				</configuration>
 				</plugin>
 				<plugin>
                 	<groupId>org.apache.maven.plugins</groupId>
